[tool.poetry]
name = "ikfm2503timeplot"
version = "0.1.0"
description = ""
authors = ["lesguillemets <kgkacko+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.21.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
